# music-visualizer

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-and-publish.yml
src/: main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  spotify_token.json  tauri.conf.json
src-tauri/src/: lib.rs  lyrics.rs  main.rs  spotify.rs
src-tauri/src/spotify/: captured_rodio_sink.rs  config.rs  core.rs  event_handler.rs  mod.rs  setup.rs
src/components/: butterchurn.tsx  current-track-info.tsx  current-user.tsx  lyrics.tsx  progress-bar.tsx
src/context/: index.ts  player-context.tsx
src/hooks/: use-audio-event.ts  use-audio-visualizer.ts  use-events.ts  use-progress.ts
src/lib/: events.ts  handle-upload.ts  lyric-utils.ts  utils.ts
src/routes/: __root.tsx  index.tsx  player.tsx  test.tsx  visualizer.tsx
src/types/: butterchurn.d.ts
