[package]
name = "desktop-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
librespot = { version = "0.6.0-dev", git = "https://github.com/librespot-org/librespot.git", branch = "dev", features = [
] }
data-encoding = "2.8.0"
sha1 = "0.10.6"
futures-util = "0.3.31"
log = "0.4.27"
env_logger = "0.11.8"
cpal = "0.15.3"
crossbeam-channel = "0.5.14"
rodio = "0.20.1"
thiserror = "2.0.12"
once_cell = "1.21.3"
reqwest = { version = "0.12.15", features = ["json"] }
regex = "1.11.1"
urlencoding = "2.1.3"
base64 = "0.22.1"
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.7.0"
